# PoliDox

./: .gitignore  AUTHORS  CRDTclient.cpp  CRDTclient.h  Gloscort_Class_Diagram.asta  PoliDox.pro  PoliDox.pro.user.4cb2cbc.4.10-pre1  README.md  TODOs  WebSocketMessageAPI  ciao  classDiagram  clientcrdt.cpp  clientcrdt.h  editor.cpp  editor.h  symbol.cpp  test.sh
PoliDocs/: PoliDocs.sln
PoliDocs/PoliDocs/: Account.h  CLIENTcontroller.cpp  CLIENTcontroller.h  CMakeLists.txt  CRDT.cpp  CRDT.h  CRDTclient.cpp  CRDTclient.h  CRDTserver.cpp  CRDTserver.h  Char.cpp  Char.h  Controller.cpp  Controller.h  EDITOR.cpp  EDITOR.h  PoliDocs.cpp  PoliDocs.sln  PoliDocs.vcxproj  PoliDocs.vcxproj.filters  SERVERcontroller.cpp  SERVERcontroller.h  Symbol.cpp  Symbol.h
PoliDocs/PoliDocs/Debug/: PoliDocs.ilk  vc142.idb
PoliDocs/PoliDocs/Debug/PoliDocs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PoliDocs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-PoliDoxClient-Desktop_Qt_5_12_2_clang_64bit-Debug/: Makefile  moc_Client.cpp  moc_ClientController.cpp  moc_CrdtClient.cpp  moc_Editor.cpp  moc_Log_dialog.cpp  qrc_Resources.cpp  ui_editor.h  ui_log_dialog.h
build-PoliDoxClient-Desktop_Qt_5_13_1_GCC_64bit-Debug/: Makefile  moc_ClientController.cpp  moc_CrdtClient.cpp  moc_Editor.cpp  moc_editor.cpp  polidox-client  qrc_Resources.cpp  ui_editor.h
build-PoliDoxServer-Desktop_Qt_5_12_2_clang_64bit-Debug/: Makefile  moc_Server.cpp  moc_ServerController.cpp  polidox-server
build-PoliDoxServer-Desktop_Qt_5_13_1_GCC_64bit-Debug/: Makefile  (+3 more)
(+112 files in other folders)
